fix gap headerr

--- a/src/components/global/Header/Header.sass
+++ b/src/components/global/Header/Header.sass
@@ -10,7 +10,7 @@ header
 			li.wpml-ls-current-language
 				@apply hidden
 .header
-	@apply container flex justify-between gap-60 py-2 items-center relative px-4
+	@apply container flex justify-between gap-44 py-2 items-center relative px-4
 	.left-header
 		@apply flex items-center gap-15 flex-1
 		.input-search
